# ffchess

./: CODING_STYLE.md  Cargo.toml  DATA_DRIVEN_DESIGN.md  DOCGEN.md  PROJECT_OVERVIEW.md  README.md  REFACTOR.md
client/: Cargo.toml  Trunk.toml  index.html
client/src/: camera.rs  canvas.rs  main.rs  math.rs  net.rs  reducer.rs  ui_state.rs  utils.rs
client/src/app/: browser.rs  component.rs  config.rs  favicon.rs  mod.rs  ws.rs
client/src/app/component/: callbacks.rs  effects.rs  mod.rs  view.rs
client/src/app/component/effects/: browser.rs  connection.rs  keyboard.rs  ui.rs
client/src/canvas/: color.rs  mod.rs  pieces.rs  renderer.rs  types.rs
client/src/components/: defeat_screen.rs  disconnected_screen.rs  end_screen.rs  error_toast.rs  fatal_notification.rs  game_view.rs  join_screen.rs  leaderboard.rs  mod.rs  shop_ui.rs  victory_screen.rs
client/src/components/game_view/: chat.rs  component.rs  geometry.rs  helpers.rs  mod.rs  shop_context.rs  types.rs
client/src/hooks/: mod.rs
client/src/reducer/: actions.rs  handlers.rs  mod.rs  reducer_impl.rs  time.rs  types.rs
common/: Cargo.toml
common/src/: lib.rs  logic.rs  models.rs  protocol.rs  types.rs
common/src/models/: config.rs  hook.rs  mod.rs  state.rs  summary.rs
common/src/protocol/: error.rs  message.rs  mod.rs
common/src/types/: board.rs  id.rs  misc.rs  mod.rs  numeric.rs  time.rs  visual.rs
common/tests/: expression_tests.rs  logic_tests.rs  more_logic_tests.rs  types_tests.rs
config/global/: client.jsonc  server.jsonc
config/modes/: arena.jsonc  blitz.jsonc  bullet.jsonc  classic_queue.jsonc  duel.jsonc  ffa.jsonc  rapid.jsonc  skirmish.jsonc
config/pieces/: bishop.jsonc  blitz_king.jsonc  blitz_knight.jsonc  blitz_pawn.jsonc  blitz_pawn_northbound.jsonc  blitz_pawn_northbound_moved.jsonc  blitz_pawn_northbound_not_moved.jsonc  blitz_pawn_southbound.jsonc  blitz_pawn_southbound_moved.jsonc  blitz_pawn_southbound_not_moved.jsonc  blitz_queen.jsonc  bullet_bishop.jsonc  bullet_king.jsonc  bullet_knight.jsonc  bullet_pawn.jsonc  bullet_pawn_northbound.jsonc  bullet_pawn_northbound_moved.jsonc  bullet_pawn_northbound_not_moved.jsonc  bullet_pawn_southbound_moved.jsonc  bullet_pawn_southbound_not_moved.jsonc  bullet_queen.jsonc  bullet_rook.jsonc  king.jsonc  knight.jsonc  pawn.jsonc  pawn_southbound.jsonc  queen.jsonc  rapid_bishop.jsonc  rapid_king.jsonc  rapid_knight.jsonc  rapid_pawn.jsonc  rapid_pawn_northbound.jsonc  rapid_pawn_northbound_moved.jsonc  rapid_pawn_northbound_not_moved.jsonc  rapid_pawn_southbound.jsonc  rapid_pawn_southbound_moved.jsonc  rapid_pawn_southbound_not_moved.jsonc  rapid_queen.jsonc  rapid_rook.jsonc  rook.jsonc
config/queue_layouts/: classic_queue.jsonc
docs/: DATA_DRIVEN_REFACTOR.md  DESIGN.md  README.md  UPDATED_DESIGN.md
docs/config/: global.md  (+3 more)
server/: Cargo.toml
server/src/: colors.rs  config.rs  handlers.rs  instance.rs  lib.rs  main.rs  movement.rs  npc.rs  paths.rs  player.rs  shop.rs  spawning.rs  state.rs  state_extensions.rs  tick.rs  time.rs  types.rs
server/src/handlers/: http.rs  mod.rs  name.rs  queue.rs  ws.rs
server/src/handlers/ws/: mod.rs  session.rs  throttle.rs
server/src/instance/: captures.rs  chat_history.rs  game_instance.rs  hooks.rs  mod.rs  moves.rs  npcs.rs  players.rs  shops.rs  ticks.rs
server/src/npc/: ai.rs  mod.rs  spawning.rs
server/src/state/: bindings.rs  games.rs  mod.rs  preview.rs  queue.rs
server/src/state/preview/: mod.rs  types.rs
server/tests/: color_tests.rs  config_parse_tests.rs  extended_tests.rs  removal_tests.rs  respawn_tests.rs  shop_tests.rs  spawning_tests.rs  state_tests.rs
(+18 files in other folders)
