[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d", 
    "CanvasGradient",
    "HtmlCanvasElement", 
    "Window", 
    "Document", 
    "Element", 
    "WebSocket", 
    "MessageEvent", 
    "ErrorEvent", 
    "CloseEvent", 
    "KeyboardEvent", 
    "MouseEvent",
    "WheelEvent",
    "Performance",
    "DomRect",
    "TextMetrics"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5"
gloo-timers = "0.3"
gloo-utils = "0.2"
gloo-events = "0.2"
js-sys = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
glam = { version = "0.29", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
tokio = { version = "1.0", features = ["sync"] }
