[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
educe = "0.6"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
glam = { version = "0.29", features = ["serde"] } # For 2D math
meval = "0.2.0"
walkdir = "2.5.0"
