[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
glam = { version = "0.29", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
dashmap = "6.0"
futures-util = "0.3"
meval = "0.2.0"
walkdir = "2.5.0"
